--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-        }
+        background-color: red
+	}
         .container {
             width: 300px;
             margin: 0 auto;
